; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_make_size.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_make_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PNG_INTERLACE_NONE = common dso_local global i32 0, align 4
@PNG_INTERLACE_ADAM7 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @make_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_size(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  br label %11

11:                                               ; preds = %48, %4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp sle i32 %12, %13
  br i1 %14, label %15, label %51

15:                                               ; preds = %11
  store i32 1, i32* %9, align 4
  br label %16

16:                                               ; preds = %44, %15
  %17 = load i32, i32* %9, align 4
  %18 = icmp sle i32 %17, 16
  br i1 %18, label %19, label %47

19:                                               ; preds = %16
  store i32 1, i32* %10, align 4
  br label %20

20:                                               ; preds = %40, %19
  %21 = load i32, i32* %10, align 4
  %22 = icmp sle i32 %21, 16
  br i1 %22, label %23, label %43

23:                                               ; preds = %20
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @DEPTH(i32 %26)
  %28 = load i32, i32* @PNG_INTERLACE_NONE, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @make_size_image(i32* %24, i32 %25, i32 %27, i32 %28, i32 %29, i32 %30, i32 0)
  %32 = load i32*, i32** %5, align 8
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @DEPTH(i32 %34)
  %36 = load i32, i32* @PNG_INTERLACE_NONE, align 4
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %10, align 4
  %39 = call i32 @make_size_image(i32* %32, i32 %33, i32 %35, i32 %36, i32 %37, i32 %38, i32 1)
  br label %40

40:                                               ; preds = %23
  %41 = load i32, i32* %10, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %10, align 4
  br label %20

43:                                               ; preds = %20
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %9, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %9, align 4
  br label %16

47:                                               ; preds = %16
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %7, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %7, align 4
  br label %11

51:                                               ; preds = %11
  ret void
}

declare dso_local i32 @make_size_image(i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @DEPTH(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
